# G4TPR2010

./: CMakeLists.txt  README.md  geometry.gdml  init.mac  main.cpp
catch/: catch.h
include/: ActionInitialization.h  Analysis.h  DetectorConstruction.h  EventAction.h  PrimaryGeneratorAction.h  RunAction.h  RunConext.h  RunContext.h  RunParameters.h  Scoring.h  SteppingAction.h  util.h
src/: ActionInitialization.cpp  Analysis.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  RunConext.cpp  RunContext.cpp  RunParameters.cpp  Scoring.cpp  SteppingAction.cpp
test/: test_scoring.cpp  test_util.cpp
